...
      label: 'Accueil',
      href: '/dashboard',
      icon: HomeIcon,
      routes: ['dashboard']
    },
    {
      label: 'Découvrir',
      href: '/discover',
      icon: MagnifyingGlassIcon,
      routes: ['discover']
    },
    {
      label: 'Favoris',
...
