...
  // Home
  homeScreen: 'home-screen',
  productList: 'product-list',
  productCard: (index: number) => `product-card-${index}`,
  productCardById: (id: number) => `product-card-id-${id}`,
  categoryChip: (category: string) => `category-chip-${category}`,
  searchInput: 'search-input',

  // Product Details
  productDetailsScreen: 'product-details-screen',
  productImage: 'product-image',
  productName: 'product-name',
  productPrice: 'product-price',
...
